add new feature

--- a/krisna-dto/krisna-dto.csproj
+++ b/krisna-dto/krisna-dto.csproj
@@ -21,10 +21,12 @@
     <Folder Include="Models\" />
     <Folder Include="Data\" />
     <Folder Include="DTOs\Book\" />
+    <Folder Include="DTOs\User\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Data\" />
     <None Remove="DTOs\Book\" />
+    <None Remove="DTOs\User\" />
   </ItemGroup>
 </Project>
