--- a/krisna-dto/krisna-dto.csproj
+++ b/krisna-dto/krisna-dto.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.17" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="MySql.Data" Version="8.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.18" />
   </ItemGroup>
 
   <ItemGroup>
