add forget and new password

--- a/krisna-dto/appsettings.json
+++ b/krisna-dto/appsettings.json
@@ -14,10 +14,10 @@
   },
   "EmailSettings": {
     "FromDisplayName": "No Reply Email",
-    "From": "krisna.revou@gmail.com",
+    "From": "",
     "Host": "smtp.gmail.com",
-    "UserName": "krisna.revou@gmail.com",
-    "Password": "krisna121",
+    "UserName": "",
+    "Password": "",
     "Port": 465
   }
 }
