--- a/krisna-dto/appsettings.json
+++ b/krisna-dto/appsettings.json
@@ -14,10 +14,10 @@
   },
   "EmailSettings": {
     "FromDisplayName": "No Reply Email",
-    "From": "",
+    "From": "soupursuit@gmail.com",
     "Host": "smtp.gmail.com",
-    "UserName": "",
-    "Password": "",
+    "UserName": "soupursuit@gmail.com",
+    "Password": "azwdlailptelqbzg",
     "Port": 465
   }
 }
